# commit-to-change

./: .gitignore  AGENTS.md  AUTHENTICATION.md  AUTH_SUMMARY.md  DEPLOYMENT.md  DEPLOY_QUICK.md  MIGRATION.md  README.md  RECIPE_SAVE_IMPLEMENTATION.md  SETUP.md  SUPABASE_MIGRATION.sql  SUPABASE_SETUP_GUIDE.md  eslint.config.mjs  package.json
.github/workflows/: smoke.yml
agent/: .env.example  README.md  agent_v5.py  auth_utils.py  pyproject.toml  requirements.txt  server.py
agent/eval_scripts/: eval_agent_trajectory.py  eval_recipe_extraction.py
agent/tools/: __init__.py  generation.py  models.py  unified_extraction.py  validation.py
agent/utils/: __init__.py  model.py  prompts.py  retry.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/recipes/: page.tsx
src/components/: ChatInterface.tsx  EmptyRecipeState.tsx  HomePage.tsx  Navigation.tsx  RecipeCard.tsx  RecipeFilterPanel.tsx  RecipeMinimalCard.tsx  Sidebar.tsx  ThreadsList.tsx  proverbs.tsx  recipe-search.tsx
src/components/auth/: LoginModal.tsx  UserMenu.tsx
src/components/landing/: FeatureCard.tsx  Header.tsx  HeroSection.tsx  LandingPage.tsx  index.ts
src/components/modals/: ExtractRecipeModal.tsx
src/components/recipe/: DeleteRecipeModal.tsx  EmptyRecipeState.tsx  RecipeCard.tsx  RecipeFilterPanel.tsx  RecipeGridCard.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  index.ts
src/hooks/: useMessagePersistence.ts  useSupabaseAuth.ts  useThreadManager.ts
src/lib/: types.ts
src/lib/supabase/: chatHistory.ts  client.ts  server.ts  (+1 more)
(+2 files in other folders)
